5 html, sass, small !media product

--- a/single_page.html
+++ b/single_page.html
@@ -18,7 +18,7 @@
     <div class="header">
         <div class="container">
             <div class="header_logoinputs">
-                <div class="header_logoinputs_logo" onclick="window.open('../page/index.html', '_self');">
+                <div class="header_logoinputs_logo" onclick="window.open('index.html', '_self');">
                     <img src="logo.png" alt="Logo" class="header_logoinputs_logo_imglogo" id="klick">
                     <p class="header_logoinputs_logo_textlogo">BRAN<span class="header_logoinputs_logo_text">D</span>
                     </p>
@@ -67,7 +67,7 @@
                 </div>
 
                 <div class="header_bar">
-                    <button class="button_header_box">
+                    <button class="button_header_box" onclick=" window.open('shoping_card.html', '_self' );">
 
                         <img src="corf.png" alt="Corf" class="header_bar_imgcorf">
 
@@ -115,7 +115,8 @@
                     </button>
 
 
-                    <button class="header_bar_buttonlist" onclick="alert('Ваш аккаунт.')">My account
+                    <button class="header_bar_buttonlist" onclick=" window.open('cheking.html', '_self' );">My
+                        account
                         <img src="scrol2.png" alt="V" class="imgscrol">
                     </button>
                     </button>
@@ -572,7 +573,8 @@
                             <option id="xl" name="optimal_length">XL</option>
                             <option id="xxl" name="big_length">XXL</option>
                         </select></p>
-                    <p class="innervariable_textname">QUANTITY <input type="text" class="product_vivi"></p>
+                    <p class="innervariable_textname">QUANTITY <input type="number" class="product_vivi"
+                            placeholder="info?"></p>
                 </div>
                 <button class="submit_product" onclick="alert('Данные переданны!')">
                     <img src="red_copf.png" alt="#" class="icon_copf">
@@ -675,7 +677,7 @@
 
             <div class="mega_footer container">
                 <section class="content_footer_logotext_section">
-                    <div class="header_logoinputs_logo" onclick="window.open('../page/index.html', '_self');">
+                    <div class="header_logoinputs_logo" onclick="window.open('index.html', '_self');">
                         <img src="logo.png" alt="Logo" class="header_logoinputs_logo_imglogo" id="klick">
                         <p class="header_logoinputs_logo_textlogo">BRAN<span
                                 class="header_logoinputs_logo_text">D</span>
